# veriker

./: .gitattributes  .gitignore  CONTRIBUTING.md  GOVERNANCE.md  MANIFEST_SCHEMA.md  NO-RELICENSE.md  NOTICE  README.md  SECURITY.md  TRADEMARK.md  VERIFIER_CONTRACT.md  pyproject.toml
.github/workflows/: publish.yml
audit_bundle/: __init__.py  _freeze.py  admission.py  append_only_floor.py  bundle_manifest.py  causal_chain_coverage.py  conservation.py  contract_slots.json  contract_slots.py  cross_host_identity.py  event_stream.py  git_blob_resolver.py  integrity_ownership.py  manifest_three_set.py  plugin.py  revocation.py  snapshot.py  stamp_claims.py  verdict.py  verifier.py  vkernel_key_loader.py
audit_bundle/coverage/: __init__.py  protocol.py  sum_invariant_plugin.py
audit_bundle/discharge/: __init__.py  context_substitution.py  smtlib_parser.py  verifier_signing.py  z3_runner.py
audit_bundle/dsse/: __init__.py  envelope.py  header.py  pae.py  payload.py  set_closure.py  version_map.py
audit_bundle/effect_runtime/: README.md  __init__.py  effect_binding.py  trace_attestation.py
audit_bundle/emitter/: __init__.py  hooks.py  pipeline.py
audit_bundle/extensions/: __init__.py  c14v3_rigor_profile.py  c17_attested_serving.py  c18_plugin_oci_loader.py  c18_tuf_bootstrap.py  c18_tuf_client.py  c18_verifier_identity.py  c20_semantic_fidelity.py  c9_1_append_only_files.py  fulcio_identity.py  rekor_anchor.py
audit_bundle/fragments/: README.md  __init__.py  attestable.py  fragment_id.py  sentence_segmenter.py
audit_bundle/gate/: __init__.py  ed25519_verdict_signing.py  verdict_signing.py
audit_bundle/output_modes/: README.md  __init__.py  dispatch.py  es_pipeline.py  mode.py  ve_pipeline.py
audit_bundle/plugins/: REASON_CODES.md  __init__.py  dispatch_record_wellformed.py  falsification_negative_test.py  file_integrity_many_small.py  fragment_attestation.py  monotone_growth.py  pass3_conservation_shim.py  re_derivation_invocation.py  refinement_discharge.py  source_attributes_consistency.py  spec_sha_pin.py  stamp_lattice.py  three_set_sum_invariant.py  verifier_identity_tripwire.py
audit_bundle/rederivation/: THREAT_MODEL.md  __init__.py  comparators.py  dispatch.py  registry.py  spec_binding.py
audit_bundle/retrieval/: README.md  __init__.py  capture.py  three_set.py  trace.py
audit_bundle/snapshots/: README.md  __init__.py  cid.py  ingest_record.py  snapshot_policy.py  snapshot_store.py
audit_bundle/source_registry/: README.md  __init__.py  allow_list_v0.json  decision_provenance.py  issuer_verifier.py  properties.py  signature_verifier.py
examples/: _spec_pinned_overlay.py
examples/agritech_sensor_minimal/: README.md  YieldFusionReDerivationCheck.py  _build_bundle.py  agritech_sensor_recompute.py  pilot.json  spec_pinned_check.py  verify.py  yield_fusion_re_derivation.py
examples/aml_txn_monitoring_minimal/: AmlTxnMonitoringReDerivationCheck.py  README.md  _build_bundle.py  aml_txn_monitoring_re_derivation.py  aml_txn_monitoring_recompute.py  pilot.json  spec_pinned_check.py  verify.py
examples/audio_minimal/: README.md  (+7 more)
tests/: test_acceptance_tolerance_authority_ratchet.py  test_action_gate_verdict_signing.py  test_admit_json_file.py  test_agritech_sensor_spec_pinned.py  test_aml_txn_monitoring_minimal.py  test_aml_txn_monitoring_spec_pinned.py  test_anticheat_adjudication_minimal.py  test_anticheat_adjudication_spec_pinned.py  test_append_only_floor.py  test_applies_to_files_exact_path_lint.py  test_assurance_profile_guard.py  test_audio_minimal.py  test_audio_spec_pinned.py  test_auto_ubi_minimal.py  test_auto_ubi_spec_pinned.py  test_bom_minimal.py  test_bom_spec_pinned.py  test_broad_except_tuple_lint.py  test_build_minimal.py  test_build_real_compiler_minimal.py  test_build_real_compiler_spec_pinned.py  test_build_spec_pinned.py  test_bundle_exec_gate_structural.py  test_bundle_json_admission_ratchet.py  test_bundle_manifest.py  test_c19c_tsa_roughtime_bls.py  test_c9_1_append_only_files.py  test_causal_chain_coverage.py  test_chat_log_redaction_minimal.py  test_chat_log_redaction_spec_pinned.py  test_cli_library_verdict_divergence.py  test_climate_emission_minimal.py  test_climate_emission_spec_pinned.py  test_climate_multi_output_spec_pinned.py  test_combi_screen_minimal.py  test_combi_screen_spec_pinned.py  test_comparator_numeric_model.py  test_conservation_gate.py  test_content_provenance_minimal.py  test_content_provenance_spec_pinned.py  (+143 more)
veriker/: __init__.py  __main__.py
(+532 files in other folders)
